implement tenant in admin api
